samples/python/tilengine.py


	def set_load_path(self, path):
		"""
		Sets base path for all data loading static methods (`::fromfile()`)
		:param path: Base path. Files will load at path/filename. Set None to use current directory
		"""
		_tln.TLN_SetLoadPath(_encode_string(path))

	def set_custom_blend_function(self, blend_function):
		"""
		Sets custom blend function to use in sprites or background layers when `BLEND_CUSTOM` mode
		is selected with the `::set_blend_mode()` method.
		:param blend_function: name of the user-defined function to call when blending that takes
		two integer arguments: source component intensity, destination component intensity, and returns
		the desired intensity.
		````
		# do 50%/50% blending example
		def blend_function(src, dst):
			return (src + dst) / 2
		"""
		self.cb_blend_func = _blend_function(blend_function)
		_tln.TLN_SetCustomBlendFunction(self.cb_blend_func)

	def get_available_sprite(self):
		"""
		:return: Index of the first unused sprite (starting from 0) or -1 if none found
		"""
		return _tln.TLN_GetAvailableSprite()

	def get_available_animation(self):
		"""
		:return: Index of the first unused animation (starting from 0) or -1 if none found 
		"""
		return _tln.TLN_GetAvailableAnimation()


# window management -----------------------------------------------------------
_tln.TLN_CreateWindow.argtypes = [c_char_p, c_int]
_tln.TLN_CreateWindow.restype = c_bool
_tln.TLN_CreateWindowThread.argtypes = [c_char_p, c_int]
_tln.TLN_CreateWindowThread.restype = c_bool
_tln.TLN_ProcessWindow.restype = c_bool
_tln.TLN_IsWindowActive.restype = c_bool
_tln.TLN_GetInput.argtypes = [c_int]
_tln.TLN_GetInput.restype = c_bool
_tln.TLN_DrawFrame.argtypes = [c_int]
_tln.TLN_EnableCRTEffect.argtypes = [c_int, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_bool, c_ubyte]
_tln.TLN_GetTicks.restype = c_int
_tln.TLN_Delay.argtypes = [c_int]
_tln.TLN_BeginWindowFrame.argtypes = [c_int]


class Window(object):
	"""
	Built-in window manager for easy setup and testing
	"""

	@classmethod
	def create(cls, overlay=None, flags=WindowFlags.VSYNC):
		"""
		Static method that creates a single-threaded window that must be used in conjunction with
		`Window::process()` and `Window::draw_frame()` in a loop
		:param overlay: name of an optional bitmap for use as overlay by the CRT effect
		:param flags: optional flags combination of `class WindowFlags` values
		:return: instance of the created window
		"""
		global _window
		if _window is not None:
			return _window
		ok = _tln.TLN_CreateWindow(_encode_string(overlay), flags)
		if ok is True:
			_window = Window()
			return _window
		else:
			_raise_exception(ok)

	@classmethod
	def create_threaded(cls, overlay=None, flags=WindowFlags.VSYNC):
		"""
		Static method that creates a multi-threaded window that runs in its own thread without user loop.
		Used mainly in python interactive console
		:param overlay: name of an optional bitmap for use as overlay by the CRT effect
		:param flags: optional flags combination of `class WindowFlags` values
		"""
		global _window
		if _window is not None:
			return _window
		ok = _tln.TLN_CreateWindowThread(_encode_string(overlay), flags)
		if ok is True:
			_window = Window()
			return _window
		else:
			_raise_exception(ok)

	def process(self):
		"""
		Does basic window housekeeping in signgle-threaded window, created with `Window::create()`.
		This method must be called in a loop by the main thread.
		:return: True if window is active or False if the user has requested to end the application
		(by pressing Esc key or clicking the close button)
		"""
		return _tln.TLN_ProcessWindow()

	def is_active(self):
		"""
		:return: True if window is active or False if the user has requested to end the application
		(by pressing Esc key or clicking the close button)
		"""
		return _tln.TLN_IsWindowActive()

	def get_input(self, input_id):
		"""
		Returns the state of a given input
		:param input_id: one of the `class Input` defined values
		:return: True if that input is pressed or False if not
		"""
		return _tln.TLN_GetInput(input_id)

	def draw_frame(self, num_frame=0):
		"""
		Draws a frame to a single-threaded window
		:param num_frame: optional timestamp value (frame number) for animation control
		"""
		_tln.TLN_DrawFrame(num_frame)

	def wait_redraw(self):
		"""
		In multi-threaded windows, it waits until the current frame has finished rendering. 
		"""
		_tln.TLN_WaitRedraw()

	def enable_crt_effect(self, overlay_id, overlay_blend, threshold, v0, v1, v2, v3, blur, glow_factor):
		"""
		Enables CRT simulation post-processing effect to give true retro appearance. Enabled by default.
		:param overlay_id: One of the defined `class Overlay` values. 
		Choosing `Overlay::CUSTOM` selects the image passed when calling `::create()`
		:param overlay_blend: blend factor for overlay image. 0 is full transparent (no effect), 255 is full blending
		:param threshold: Middle point of the brightness mapping function
		:param v0: output brightness when input brightness = 0
		:param v1: output brightness when input brightness = threshold
		:param v2: output brightness when input brightness = threshold (to create discontinuity with v1)
		:param v3: output brightness when input brightness = 255
		:param blur: True to add gaussian blur to brightness overlay, softens image
		:param glow_factor: blend addition factor for brightness overlay. 0 is not addition, 255 is full addition
		"""
		_tln.TLN_EnableCRTEffect(overlay_id, overlay_blend, threshold, v0, v1, v2, v3, blur, glow_factor)

	def disable_crt_effect(self):
		"""
		Disables the CRT post-processing effect enabled with `::enable_crt_effect()`
		"""
		_tln.TLN_DisableCRTEffect()

	def get_ticks(self):
		"""
		:return: the number of milliseconds since application start
		"""
		return _tln.TLN_GetTicks()

	def delay(self, msecs):
		"""
		Suspends execition for a fixed time
		:param msecs: number of milliseconds to pause
		"""
		_tln.TLN_Delay(msecs)

	def begin_frame(self, num_frame):
		"""
		Begins active rendering frame to the window
		:param num_frame: optional timestamp value (frame number) for animation control 
		"""
		_tln.TLN_BeginWindowFrame(num_frame)

	def end_frame(self):
		"""
		Finishes rendering the current frame and updates the window 
		"""
		_tln.TLN_EndWindowFrame()


# spritesets management -----------------------------------------------------------
_tln.TLN_CreateSpriteset.argtypes = [c_void_p, POINTER(SpriteData), c_int]
_tln.TLN_CreateSpriteset.restype = c_void_p
_tln.TLN_LoadSpriteset.argtypes = [c_char_p]
_tln.TLN_LoadSpriteset.restype = c_void_p
_tln.TLN_CloneSpriteset.argtypes = [c_void_p]
_tln.TLN_CloneSpriteset.restype = c_void_p
_tln.TLN_GetSpriteInfo.argtypes = [c_void_p, c_int, POINTER(SpriteInfo)]
_tln.TLN_GetSpriteInfo.restype = c_bool
_tln.TLN_GetSpritesetPalette.argtypes = [c_void_p]
_tln.TLN_GetSpritesetPalette.restype = c_void_p
_tln.TLN_DeleteSpriteset.argtypes = [c_void_p]
_tln.TLN_DeleteSpriteset.restype = c_bool


class Spriteset(object):
	"""
	The Spriteset object holds the graphic data used to render moving objects (sprites)
	"""

	def __init__(self, handle):
		self._as_parameter_ = handle
		self.palette = Palette(_tln.TLN_GetSpritesetPalette(handle))

	@classmethod
	def create(cls, bitmap, sprite_data):
		"""
		Static method that creates an empty spriteset
		:param bitmap: Bitmap object containing the packaged sprite pictures
		:param sprite_data: list of SpriteEntry tuples describing each sprite pictures
		:return: instance of the created object
		"""
		handle = _tln.TLN_CreateSpriteset(bitmap, sprite_data, len(sprite_data))
		if handle is not None:
			return Spriteset(handle)
		else:
			_raise_exception()

	@classmethod
	def fromfile(cls, filename):
		"""
		Static method that loads a spriteset from a pair of png/txt files
		:param filename: png filename with bitmap data
		:return: instance of the created object 
		"""
		handle = _tln.TLN_LoadSpriteset(_encode_string(filename))
		if handle is not None:
			return Spriteset(handle)
		else:
			_raise_exception()

	def clone(self):
		"""
		Creates a copy of the object
		:return: instance of the copy
		"""
		handle = _tln.TLN_CloneSpriteset(self)
		if handle is not None:
			return Spriteset(handle)
		else:
			_raise_exception()

	def get_sprite_info(self, entry, info):
		"""
		Gets info about a given sprite in
		:param entry: 
		:param info: 
		"""
		ok = _tln.TLN_GetSpriteInfo(self, entry, info)
		_raise_exception(ok)

	def delete(self):
		"""
		Destroys the object and releases unmanaged resources
		"""
		ok = _tln.TLN_DeleteSpriteset(self)
		_raise_exception(ok)


# tilesets management ---------------------------------------------------------
_tln.TLN_CreateTileset.argtypes = [c_int, c_int, c_int, c_void_p, c_void_p, POINTER(c_byte)]
_tln.TLN_CreateTileset.restype = c_void_p
_tln.TLN_LoadTileset.argtypes = [c_char_p]
_tln.TLN_LoadTileset.restype = c_void_p
_tln.TLN_CloneTileset.argtypes = [c_void_p]
_tln.TLN_CloneTileset.restype = c_void_p
_tln.TLN_SetTilesetPixels.argtypes = [c_void_p, c_int, POINTER(c_byte), c_int]
_tln.TLN_SetTilesetPixels.restype = c_bool
_tln.TLN_CopyTile.argtypes = [c_void_p, c_int, c_int]
_tln.TLN_CopyTile.restype = c_bool
_tln.TLN_GetTileWidth.argtypes = [c_void_p]
_tln.TLN_GetTileWidth.restype = c_int
_tln.TLN_GetTileHeight.argtypes = [c_void_p]
_tln.TLN_GetTileHeight.restype = c_int
_tln.TLN_GetTilesetPalette.argtypes = [c_void_p]
_tln.TLN_GetTilesetPalette.restype = c_void_p
_tln.TLN_GetTilesetSequencePack.argtypes = [c_void_p]
_tln.TLN_GetTilesetSequencePack.restype = c_void_p
_tln.TLN_FindSpritesetSprite.argtypes = [c_void_p, c_char_p]
_tln.TLN_FindSpritesetSprite.restype = c_int
_tln.TLN_DeleteTileset.argtypes = [c_void_p]
_tln.TLN_DeleteTileset.restype = c_bool


class Tileset(object):
	"""
	The Tileset object holds the graphic tiles used to render background layers from a Tilemap
	"""
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.tile_width = _tln.TLN_GetTileWidth(handle)
		self.tile_height = _tln.TLN_GetTileHeight(handle)
		self.palette = Palette(_tln.TLN_GetTilesetPalette(handle))
		self.sequence_pack = SequencePack(_tln.TLN_GetTilesetSequencePack(handle))

	@classmethod
	def create(cls, num_tiles, width, height, palette, sequence_pack=None, types=None):
		"""
		Static method that creates an empty Tileset at runtime
		:param num_tiles: number of unique tiles
		:param width: Width of each tile (must be multiple of 8)
		:param height: Height of each tile (must be multiple of 8)
		:param palette: Palette object
		:param sequence_pack: Optional SequencePack with associated Tileset animations
		:param types: Optional list of bytes with the type of each tile, one tile per byte
		:return: instance of the created object 
		"""
		handle = _tln.TLN_CreateTileset(num_tiles, width, height, palette, sequence_pack, types)
		if handle is not None:
			return Tileset(handle)
		else:
			_raise_exception()

	@classmethod
	def fromfile(cls, filename):
		"""
		Static method that loads a Tiled TSX tileset from file
		:param filename: TSX file with the tileset
		:return: 
		"""
		handle = _tln.TLN_LoadTileset(_encode_string(filename))
		if handle is not None:
			return Tileset(handle)
		else:
			_raise_exception()

	def clone(self):
		"""
		Creates a copy of the object
		:return: instance of the copy
		"""
		handle = _tln.TLN_CloneTileset(self)
		if handle is not None:
			return Tileset(handle)
		else:
			_raise_exception()

	def set_pixels(self, entry, data, pitch):
		"""
		Sets pixel data for a single tile
		:param entry: Number of tile to set [0, num_tiles - 1]
		:param data: List of bytes with pixel data, one byte per pixel
		:param pitch: Number of bytes per line in source data
		"""
		ok = _tln.TLN_SetTilesetPixels(self, entry, data, pitch)
		_raise_exception(ok)
